RESOLVED FIXED182350
REGRESSION(r227893): fast/events/touch/touch-stale-node-crash.html and other tests crash
https://bugs.webkit.org/show_bug.cgi?id=182350
Summary REGRESSION(r227893): fast/events/touch/touch-stale-node-crash.html and other ...
Alicia Boya García
Reported 2018-01-31 14:05:39 PST
The following tests started crashing exactly on the reported revision: fast/events/touch/frame-hover-update.html fast/events/touch/touch-inside-iframe-scrolled.html fast/events/touch/send-oncancel-event.html fast/events/touch/touch-stale-node-crash.html
Attachments
Patch (3.81 KB, patch)
2018-02-01 00:45 PST, Carlos Garcia Campos
clopez: review+
Carlos Garcia Campos
Comment 1 2018-02-01 00:45:27 PST
EWS Watchlist
Comment 2 2018-02-01 00:46:30 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2018-02-01 05:09:23 PST
*** Bug 182381 has been marked as a duplicate of this bug. ***
Carlos Garcia Campos
Comment 4 2018-02-01 05:58:32 PST
Note You need to log in before you can comment on or make changes to this bug.