REGRESSION(r227893): fast/events/touch/touch-stale-node-crash.html and other tests crash https://bugs.webkit.org/show_bug.cgi?id=182350

Reviewed by Carlos Alberto Lopez Perez.

Ensure events synthesized from touch gestures have a valid window, screen and device.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
* UIProcess/gtk/GestureController.h: Add virtual destructor to GestureControllerclient.

Canonical link: https://commits.webkit.org/198181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227961 268f45cc-cd09-0410-ab3c-d52691b4dbfc